# Confide-SDK

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs
src/client/: api.rs  mod.rs  websocket.rs
src/crypto/: call.rs  group.rs  group_call.rs  kem.rs  keys.rs  mod.rs  prekeys.rs  ratchet.rs  recovery.rs  safety.rs  symmetric.rs
src/crypto/call/: crypto.rs  encryptor.rs  keys.rs  messages.rs  mod.rs  operations.rs  types.rs
src/crypto/group_call/: crypto.rs  keys.rs  media.rs  messages.rs  mod.rs  operations.rs  participant.rs  state.rs  tests.rs  types.rs
