[package]
name = "confide-sdk"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
description = "Post-quantum secure messaging SDK with double ratchet protocol for Confide Clients"
repository = "https://github.com/confide-gg/confide-sdk"
homepage = "https://confide.gg"
keywords = ["cryptography", "post-quantum", "messaging", "e2ee", "ml-kem"]
categories = ["cryptography", "network-programming"]
readme = "README.md"

[features]
default = ["client"]
client = ["reqwest", "tokio", "tokio-tungstenite", "futures-util"]
server = []
full = ["client", "server"]

[dependencies]
rustpq = { git = "https://github.com/sanctgroup/RustPQ", features = ["p384-mlkem1024", "mldsa87"] }

aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
base64 = "0.22"
hex = "0.4"

bincode = "1.3"
zeroize = { version = "1.8", features = ["derive"] }

reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
futures-util = { version = "0.3", optional = true }
